[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.14.1"
rand = "0.9.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.7"
serde_json = "1.0.139"
url = "2.5.4"
